--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  padding-top: 55px;
+  padding-top: 50px;
   font-family: sans-serif;
   background-color: #f3f3f3;
+  height: 100vh;
 }
