Adds working layer creation. Cancelling isn't working correctly, managing this state tree via a parent component is a pain, looking into redux

--- a/client/src/toolbar/ToolBar.css
+++ b/client/src/toolbar/ToolBar.css
@@ -47,3 +47,24 @@
   background-color: #ceffff
 }
 
+.toolBar__createLayerOption {
+  text-align: center;
+}
+
+.toolBar__layerForm {
+  width: 100%;
+}
+
+.toolBar__layerForm label {
+  width: 100%;
+}
+
+.toolBar__layerForm input {
+  margin: 10px;
+  width: 100%;
+}
+
+.toolBar__layerForm p {
+  text-align: center;
+  cursor: pointer;
+}
